# RP2040-Coursework

./: .gitignore  CMakeLists.txt  README.md
Binary_Buzzer/: BinBuz.c  BinBuzz.c  BinBuzzStub.c  CMakeLists.txt  README.md
Custom Libraries/: README.md
Fading_LED/: CMakeLists.txt  LEDFade.c  LEDFadeStub.c  PicoType.c  PicoType.h  README.md
Four_Bit_Binary_Counter/: CMakeLists.txt  Counter.c  README.md
Image_Display/: README.md
Light_Button/: Buttons.c  CMakeLists.txt  PicoType.h  README.md
Musical_Blink/: Blink.c  CMakeLists.txt
Pico_Fat_Writer/: .gitignore  CMakeLists.txt  PicoFatWriter.c  README.md  hw_config.c
TCP Math Parser/: README.md
Tone_Generator/: CMakeLists.txt  README.md  Tones.c  Tones.h
